--- a/index.html
+++ b/index.html
@@ -1,68 +1,79 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Angela's Personal Site</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
+<html lang="en" dir="ltr">
 
-  <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="images/angela.png" alt="angela profile picture"></td>
-        <td><h1>Angela Yu</h1>
-        <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
-        <p>I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
-      </tr>
-    </table>
-    <hr>
-    <h3>Books and Teaching</h3>
-    <ul>
-      <li>The Complete iOS App Development Bootcamp</li>
-      <li>The Complete Web Development Bootcamp</li>
-    </ul>
-    <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="10">
-      <thead>
+<head>
+  <meta charset="utf-8">
+  <title>My Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
+
+</head>
+
+<body >
+  <table cellspacing="20">
+    <tr>
+      <td><img src="images\p3.png" alt="Hamza Tarar Photo"></td>
+      <td>
+        <h1>Hamza Tarar</h1>
+        <p>Studing at <a href="https://www.fccollege.edu.pk/">FCCU</a> </p>
+        <p><i>Student</i> of <em>Computer Science</em></p>
+        <p><b>Lives</b> in <stong>Lahore</stong>
+        </p>
+      </td>
+    </tr>
+  </table>
+  <hr>
+  <br>
+  <p>My name is Hamza Tarar i"m currently studing</p>
+  <hr>
+  <h3>Schools</h3>
+  <ul>
+    <li>Ghazali</li>
+    <li>Punjab College</li>
+    <li>FCCU</li>
+  </ul>
+  <hr>
+
+  <h3>Skills</h3>
+<table border="1">
+  <tr>
+    <td>
+      <table>
         <tr>
-          <th>Dates</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2009-2010</td>
-          <td>Researcher at The Institute of Cognitive Neurosciences</td>
+          <td>Python</td>
+          <td>⭐️⭐️</td>
         </tr>
         <tr>
-          <td>2010-2013</td>
-          <td>Lead Developer at Tempo App</td>
+          <td>Web Development</td>
+          <td>⭐️</td>
+        </tr>
+      </table>
+   </td>
+    <td>
+      <table>
+        <tr>
+          <td>Writing</td>
+          <td>⭐️⭐️</td>
         </tr>
         <tr>
-          <td>2013-2015</td>
-          <td>Clinical Doctor at the National Health Service</td>
+          <td>Photography</td>
+          <td>⭐️⭐️⭐️</td>
         </tr>
-      </tbody>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">
-      <tr>
-        <td>iOS Development</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>Web Development</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>Photography</td>
-        <td>⭐️⭐️</td>
-      </tr>
-    </table>
-    <hr>
-    <a href="hobbies.html">My Hobbies</a>
-    <a href="contact-me.html">Contact Me</a>
-  </body>
+      </table>
+
+    </td>
+  </tr>
+</table>
+
+  <hr>
+  <a href="tables.html">Car records</a>
+  <hr>
+  <a href="hobbies.html">My Hobbies</a>
+  <br>
+  <a href="contact.html">Contact me</a>
+  <br>
+  <a href="forms.html">Fill the form</a>
+
+</body>
+
 </html>
